deployment/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: manga
  labels:
    name: manga
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: manga
  selector:
    app: manga
  type: LoadBalancer
  externalIPs:
    - 103.150.197.152
