deployment/service-mysql-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    name: mysql-service
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      name: mysql
  selector:
    app: mysql
  type: LoadBalancer
  externalIPs:
    - 103.150.197.152
