deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manga-ingress
  labels:
      network: manga-ingress 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: asyrawih.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manga-service
                port:
                  number: 80
---
